# potoki-zlib

./: .gitignore  potoki-zlib.cabal  stack.yaml
app/: Main.hs
