name:
  potoki-zlib
version:
  0.1
synopsis:
  Streaming ZLib decompression
category:
  Potoki, Streaming, ZLib, Compression
homepage:
  https://github.com/nikita-volkov/potoki-zlib
bug-reports:
  https://github.com/nikita-volkov/potoki-zlib/issues
author:
  Ilya Zubkov <izubkov.forall@gmail.com>
maintainer:
  Ilya Zubkov <izubkov.forall@gmail.com>
copyright:
  (c) 2018, Metrix.AI
license:
  MIT
license-file:
  LICENSE
build-type:
  Simple
cabal-version:
  >=1.10

source-repository head
  type:
    git
  location:
    git://github.com/nikita-volkov/potoki-zlib.git

executable main
  main-is:
    Main.hs
  ghc-options:
    -O2
    -threaded
    -rtsopts
    "-with-rtsopts=-s -T"
    -- ^ -s - productivity (does not work with Ctrl+C), T - EKG monitoring
  hs-source-dirs:
    app
  default-extensions:
    Arrows, BangPatterns, ConstraintKinds, DataKinds,
    DefaultSignatures, DeriveDataTypeable, DeriveFoldable,
    DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls,
    FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs,
    GeneralizedNewtypeDeriving, LambdaCase, LiberalTypeSynonyms,
    MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude,
    NoMonomorphismRestriction, OverloadedStrings, PatternGuards,
    ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards,
    ScopedTypeVariables, StandaloneDeriving, TemplateHaskell,
    TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language:
    Haskell2010
  other-modules:
  build-depends:
    base >=4.7 && <5,
    base-prelude >=1 && <2,
    bytestring >=0.10 && <0.11,
    ekg,
    optparse-applicative-simple >=1.0.2 && <1.1,
    potoki >=0.6.1 && <0.7,
    potoki-core >=1.2 && <1.3,
    rerebase >=1.2 && <2,
    text >=1 && <2,
    zlib >= 0.6.1.2 && < 0.7,
    potoki-zlib

library
  hs-source-dirs:
    library
  default-extensions:
    Arrows, BangPatterns, ConstraintKinds, DataKinds,
    DefaultSignatures, DeriveDataTypeable, DeriveFoldable,
    DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls,
    FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs,
    GeneralizedNewtypeDeriving, LambdaCase, LiberalTypeSynonyms,
    MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude,
    NoMonomorphismRestriction, OverloadedStrings, PatternGuards,
    ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards,
    ScopedTypeVariables, StandaloneDeriving, TemplateHaskell,
    TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language:
    Haskell2010
  exposed-modules:
    Potoki.Zlib.Transform

    -- TODO: make hidden
    Potoki.Zlib.Prelude

  other-modules:
    Potoki.Zlib.Fetch
    -- Potoki.Zlib.Prelude
  build-depends:
    base >=4.7 && <5,
    base-prelude >=1 && <2,
    bytestring >=0.10 && <0.11,
    potoki >=0.6.1 && <0.7,
    potoki-core >=1.2 && <1.3,
    rerebase >=1.2 && <2,
    text >=1 && <2,
    zlib >= 0.6.1.2 && < 0.7

